2010-11-23  Francois Chouinard  <fchouinard@gmail.com> Providing int IDs for the Stats HashMaps

	* src/org/eclipse/linuxtools/lttng/LttngConstants.java:
	* src/org/eclipse/linuxtools/lttng/event/LttngEvent.java: 
	* src/org/eclipse/linuxtools/lttng/event/LttngEventType.java: 
	* src/org/eclipse/linuxtools/lttng/model/LTTngTreeNodeGeneric.java: 
	* src/org/eclipse/linuxtools/lttng/state/evProcessor/state/AbsStateUpdate.java: 
	* src/org/eclipse/linuxtools/lttng/state/evProcessor/state/StateUpdateHandlers.java:
	* src/org/eclipse/linuxtools/lttng/state/model/LttngExecutionState.java:
	* src/org/eclipse/linuxtools/lttng/state/model/LttngProcessState.java: 
	* src/org/eclipse/linuxtools/lttng/state/model/LttngTraceState.java: 
	* src/org/eclipse/linuxtools/lttng/state/resource/ILttngStateContext.java: 
	* src/org/eclipse/linuxtools/lttng/trace/LTTngTextTrace.java: 

    * src/org/eclipse/linuxtools/lttng/state/trace/StateTraceManager.java: Adjusted buffering between checkpoints
    * src/org/eclipse/linuxtools/lttng/trace/LTTngExperiment.java: Ditto
	* src/org/eclipse/linuxtools/lttng/trace/LTTngTrace.java: Ditto

2010-11-19  Francois Chouinard  <fchouinard@gmail.com>

	* build.properties: Cosmetic spacing
	* src/org/eclipse/linuxtools/lttng/trace/LTTngTextTrace.java: Suppress warning for non-externalized strings

2010-11-10  Francois Chouinard  <fchouinard@gmail.com>

    Suppress warning for non-externalized strings
	   * src/org/eclipse/linuxtools/lttng/control/LttngSyntheticEventProvider.java: 
	   * src/org/eclipse/linuxtools/lttng/event/LttngEvent.java: 
	   * src/org/eclipse/linuxtools/lttng/event/LttngEventContent.java: 
	   * src/org/eclipse/linuxtools/lttng/event/LttngEventReference.java: 
	   * src/org/eclipse/linuxtools/lttng/event/LttngEventType.java: 
	   * src/org/eclipse/linuxtools/lttng/event/LttngLocation.java: 
	   * src/org/eclipse/linuxtools/lttng/event/LttngTimestamp.java: 
	   * src/org/eclipse/linuxtools/lttng/LTTngCorePlugin.java: 